# swagger_server/models/push_to_redis.py
@@ -1,64 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from .base_model_ import Model
-from datetime import date, datetime
-from typing import List, Dict
-from ..util import deserialize_model
-
-
-class PushToRedis(Model):
-    """
-    NOTE: This class is auto generated by the swagger code generator program.
-    Do not edit the class manually.
-    """
-    def __init__(self, message: str=None):
-        """
-        PushToRedis - a model defined in Swagger
-
-        :param message: The message of this PushToRedis.
-        :type message: str
-        """
-        self.swagger_types = {
-            'message': str
-        }
-
-        self.attribute_map = {
-            'message': 'message'
-        }
-
-        self._message = message
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'PushToRedis':
-        """
-        Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The pushToRedis of this PushToRedis.
-        :rtype: PushToRedis
-        """
-        return deserialize_model(dikt, cls)
-
-    @property
-    def message(self) -> str:
-        """
-        Gets the message of this PushToRedis.
-
-        :return: The message of this PushToRedis.
-        :rtype: str
-        """
-        return self._message
-
-    @message.setter
-    def message(self, message: str):
-        """
-        Sets the message of this PushToRedis.
-
-        :param message: The message of this PushToRedis.
-        :type message: str
-        """
-
-        self._message = message
-
