# swagger_server/swagger/swagger.yaml
@@ -22,8 +22,8 @@ paths:
       tags:
       - "models"
       summary: ""
-      description: ""
-      operationId: "update_model"
+      description: "create model"
+      operationId: "create_model"
       produces:
       - "application/json"
       parameters: []
@@ -33,39 +33,42 @@ paths:
         400:
           description: "Invalid input"
       x-swagger-router-controller: "swagger_server.controllers.models_controller"
-  /models/detect/{versionId}:
+  /models/{type}/versions:
     post:
       tags:
       - "models"
-      summary: "Query to search multiple objects"
-      description: "update model of service with model's versionId"
-      operationId: "update_model_of_detect"
+      summary: ""
+      description: "create version"
+      operationId: "create_version"
       produces:
       - "application/json"
       parameters:
-      - name: "versionId"
+      - name: "type"
         in: "path"
-        description: "model's version"
+        description: "type of model"
         required: true
         type: "string"
       responses:
         200:
           description: "successful operation"
-          schema:
-            $ref: "#/definitions/pushToRedis"
         400:
           description: "Invalid input"
       x-swagger-router-controller: "swagger_server.controllers.models_controller"
-  /models/feature/{versionId}:
+  /models/{type}/versions/{versionId}:
     post:
       tags:
       - "models"
       summary: "Query to search multiple objects"
       description: "update model of service with model's versionId"
-      operationId: "update_model_of_feature"
+      operationId: "update_model"
       produces:
       - "application/json"
       parameters:
+      - name: "type"
+        in: "path"
+        description: "model's type"
+        required: true
+        type: "string"
       - name: "versionId"
         in: "path"
         description: "model's version"
@@ -75,7 +78,7 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/pushToRedis"
+            $ref: "#/definitions/updateModelResponse"
         400:
           description: "Invalid input"
       x-swagger-router-controller: "swagger_server.controllers.models_controller"
@@ -85,8 +88,10 @@ securityDefinitions:
     name: "api_key"
     in: "header"
 definitions:
-  pushToRedis:
+  updateModelResponse:
     type: "object"
     properties:
       message:
         type: "string"
+    example:
+      message: "message"
